{
  "version": 4,
  "terraform_version": "1.0.0",
  "serial": 13,
  "lineage": "8740d983-62bf-9d00-de38-551e4fcf358c",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-093d303510c432519",
            "arn": "arn:aws:ec2:eu-west-2:777528725357:instance/i-096abb6cbfd404c30",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-096abb6cbfd404c30",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "SGK1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08ad7daf7e834804e",
            "private_dns": "ip-10-10-11-150.eu-west-2.compute.internal",
            "private_ip": "10.10.11.150",
            "public_ip": "18.130.249.145",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fce93a2ace93c1e3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-09a39d384d45da420"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bde8948b504c9f3a",
            "tags": {
              "Env": "devops_course_ec2_final",
              "Name": "devops_course_ec2_final_web_instance"
            },
            "tags_all": {
              "Env": "devops_course_ec2_final",
              "Name": "devops_course_ec2_final_web_instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09a39d384d45da420"
            ]
          },
          "dependencies": [
            "module.ec2.data.aws_ami.ubuntu",
            "module.vpc.aws_security_group.public_sg",
            "module.vpc.aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:777528725357:route-table/rtb-03546a6c119ccdf98",
            "default_route_table_id": "rtb-03546a6c119ccdf98",
            "id": "rtb-03546a6c119ccdf98",
            "owner_id": "777528725357",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d28c5ab3e965478f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "devops_course_final",
              "Name": "devops_course_final_default_route_table"
            },
            "tags_all": {
              "Env": "devops_course_final",
              "Name": "devops_course_final_default_route_table"
            },
            "vpc_id": "vpc-00c35700924904416"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:777528725357:internet-gateway/igw-0d28c5ab3e965478f",
            "id": "igw-0d28c5ab3e965478f",
            "owner_id": "777528725357",
            "tags": {
              "Env": "devops_course_final",
              "Name": "devops_course_final_igw"
            },
            "tags_all": {
              "Env": "devops_course_final",
              "Name": "devops_course_final_igw"
            },
            "vpc_id": "vpc-00c35700924904416"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:777528725357:security-group/sg-09a39d384d45da420",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09a39d384d45da420",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public_sg",
            "name_prefix": "",
            "owner_id": "777528725357",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "devops_course_final",
              "Name": "devops_course_final_public_sg_ALLOW_SSH_HTTP"
            },
            "tags_all": {
              "Env": "devops_course_final",
              "Name": "devops_course_final_public_sg_ALLOW_SSH_HTTP"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c35700924904416"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:777528725357:subnet/subnet-0bde8948b504c9f3a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.10.11.0/24",
            "id": "subnet-0bde8948b504c9f3a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "777528725357",
            "tags": {
              "Env": "devops_course_final",
              "Name": "devops_course_final_subnet_public"
            },
            "tags_all": {
              "Env": "devops_course_final",
              "Name": "devops_course_final_subnet_public"
            },
            "vpc_id": "vpc-00c35700924904416"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:777528725357:vpc/vpc-00c35700924904416",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-073666538a968950e",
            "default_route_table_id": "rtb-03546a6c119ccdf98",
            "default_security_group_id": "sg-0e75eeddb8e7ef95c",
            "dhcp_options_id": "dopt-af5556c7",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-00c35700924904416",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03546a6c119ccdf98",
            "owner_id": "777528725357",
            "tags": {
              "Env": "devops_course_final",
              "Name": "devops_course_final_vpc"
            },
            "tags_all": {
              "Env": "devops_course_final",
              "Name": "devops_course_final_vpc"
            }
          }
        }
      ]
    }
  ]
}